# dotpush

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  PKGBUILD  README.md  dotpush.install  main.py  pyproject.toml  setup.py
.github/workflows/: aur-publish.yml  ci.yml  tests.yml
DotPush.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dotpush/: cli.py  constants.py  main.py
dotpush/utils/: add.py  backup.py  config.py  git_check.py  git_env.py  git_init.py  git_push.py  git_validity.py  init.py  listing.py  remove.py  schedule.py  timer.py
systemd/: dotpush.service  dotpush.timer
tests/: test_backup.py  test_create_remote.py  test_get_username.py  test_git_check.py  test_git_push.py
utils/: init.py
